[gd_scene load_steps=8 format=3 uid="uid://cvcby560lf2o3"]

[ext_resource type="Script" uid="uid://diqtqr11lv6g1" path="res://assets/Joueur/player_3d.gd" id="1_5m16l"]
[ext_resource type="PackedScene" uid="uid://prh35jb6tjtd" path="res://assets/player/sophia_skin/sophia_skin.tscn" id="1_mp5y0"]
[ext_resource type="Resource" uid="uid://cdblygugofgu6" path="res://assets/Joueur/Ressources/clesVoiture.tres" id="2_1vxh4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5m16l"]
radius = 0.26757813
height = 1.6474609

[sub_resource type="SphereShape3D" id="SphereShape3D_5m16l"]

[sub_resource type="Animation" id="Animation_5m16l"]
resource_name = "run"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1vxh4"]
_data = {
&"run": SubResource("Animation_5m16l")
}

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_5m16l")
item_cle_requise = ExtResource("2_1vxh4")

[node name="SophiaSkin" parent="." instance=ExtResource("1_mp5y0")]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8114442, 0)
shape = SubResource("CapsuleShape3D_5m16l")

[node name="CameraPivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.9135454, -0.40673664, 0, 0.40673664, 0.9135454, 0, 1.1927307, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivot"]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)
shape = SubResource("SphereShape3D_5m16l")
spring_length = 8.5

[node name="Camera3D" type="Camera3D" parent="CameraPivot/SpringArm3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, -7.1054274e-15, 0, 1, 0, 1.4210855e-14, 0, 1, 0, 0, 0)
fov = 48.83511

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1vxh4")
}

[node name="InteractionUI" type="CanvasLayer" parent="."]

[node name="DriveLabel" type="Label" parent="InteractionUI"]
unique_name_in_owner = true
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "Appuyer sur X pour conduire"

[node name="TextureProgressBar" type="TextureProgressBar" parent="InteractionUI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="MessageLabel" type="Label" parent="InteractionUI"]
unique_name_in_owner = true
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 32
text = "Message System"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractionTimer" type="Timer" parent="."]
